--- a/src/vistaInventario/PagPrincipal.form
+++ b/src/vistaInventario/PagPrincipal.form
@@ -365,6 +365,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Limpiar"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="limpiarBotonesActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="agregado">
                   <Properties>
